# gNMI-MCP-server

./: README.md  claude_desktop_config.json  pyproject.toml
src/nokia_gnmi_mcp/: server.py
